--- a/BookReaderUmo.csproj
+++ b/BookReaderUmo.csproj
@@ -68,18 +68,10 @@
   <ItemGroup>
     <Compile Include="CChess.cs" />
     <Compile Include="CBookUmo.cs" />
+    <Compile Include="CChessExt.cs" />
     <Compile Include="CUci.cs" />
-    <Compile Include="FormBook.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormBook.Designer.cs">
-      <DependentUpon>FormBook.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="FormBook.resx">
-      <DependentUpon>FormBook.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
